new Boolean is lame.