@@ -23,7 +23,7 @@ import java.io.PrintWriter;
  *
  * @author <a href="joe@truemesh.com">Joe Walnes</a>
  * @author <a href="scott@atlassian.com">Scott Farquhar</a>
- * @version $Revision: 1.8 $
+ * @version $Revision: 1.9 $
  */
 public class PageFilter implements Filter, RequestConstants {
     private FilterConfig filterConfig = null;
@@ -111,6 +111,7 @@ public class PageFilter implements Filter, RequestConstants {
     /** Shutdown filter. */
     public void destroy() {
         factory = null;
+        filterConfig = null;
     }
 
     /**
@@ -139,7 +140,7 @@ public class PageFilter implements Filter, RequestConstants {
                 // parse the page
                 result = pageResponse.getPage();
             }
-            request.setAttribute(USING_STREAM, new Boolean(pageResponse.isUsingStream()));
+            request.setAttribute(USING_STREAM, Boolean.valueOf(pageResponse.isUsingStream()));
             pageResponse.closeWriter();
             return result;
         }
